--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -82,6 +82,56 @@ form {
     gap: $extra-small-size;
   }
 }
+.container.game {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: $common-size;
+  .container.gameboard {
+    width: 30vw;
+    aspect-ratio: 1/1;
+    > div {
+      display: grid;
+    }
+    .square {
+      border: 0.5px dashed rgb(162, 162, 162);
+    }
+  }
+  .container.ships {
+    $base-size: 1rem;
+    $color: #e6e6e6;
+    $border-color: #6b6b6b;
+    $border-radius: 50%;
+    .ship:hover {
+      background-color: $border-color;
+    }
+    .ship {
+      background-color: $color;
+      border: 0.2px solid $border-color;
+      border-radius: $border-radius;
+    }
+    .destroyer {
+      height: ($base-size * 0.7);
+      width: calc($base-size * 2);
+    }
+    .submarine {
+      height: ($base-size * 0.8);
+      width: calc($base-size * 3);
+    }
+    .cruiser {
+      height: ($base-size * 0.8);
+      width: calc($base-size * 3);
+    }
+    .battleship {
+      height: ($base-size * 0.9);
+      width: calc($base-size * 4);
+    }
+    .carrier {
+      height: ($base-size * 1);
+      width: calc($base-size * 5);
+    }
+  }
+}
 /* FOOTER */
 footer {
   /* background-color: var(--secondary-color); */
@@ -91,33 +141,16 @@ footer {
   background-color: $secondary-color;
 }
 
-/* COMMON */
+/* COMMON ELEMENTS */
 
 input {
   border-radius: $small-border-radius;
   border: 1px solid $fade-color;
   padding: $smaller-padding;
 }
-
 .fade {
   opacity: 0.3;
 }
 .hide {
   display: none;
-}
-.container.game {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: $common-size;
-}
-.container.gameboard {
-  width: 30vw;
-  aspect-ratio: 1/1;
-  > div {
-    display: grid;
-  }
-  .square {
-    border: 0.5px dashed rgb(162, 162, 162);
-  }
 }
