--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -101,10 +101,16 @@ form {
     }
   }
   .container.ships {
-    $base-size: 1rem;
+    --base-size-prop: 1rem;
+    // $base-svar(--base-size-prop)
     $color: #e6e6e6;
     $border-color: #6b6b6b;
     $border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     .ship:hover {
       background-color: $border-color;
     }
@@ -114,24 +120,24 @@ form {
       border-radius: $border-radius;
     }
     .destroyer {
-      height: ($base-size * 0.7);
-      width: calc($base-size * 2);
+      height: (var(--base-size-prop) * 0.7);
+      width: calc(var(--base-size-prop) * 2);
     }
     .submarine {
-      height: ($base-size * 0.8);
-      width: calc($base-size * 3);
+      height: (var(--base-size-prop) * 0.7);
+      width: calc(var(--base-size-prop) * 3);
     }
     .cruiser {
-      height: ($base-size * 0.8);
-      width: calc($base-size * 3);
+      height: (var(--base-size-prop) * 0.7);
+      width: calc(var(--base-size-prop) * 3);
     }
     .battleship {
-      height: ($base-size * 0.9);
-      width: calc($base-size * 4);
+      height: (var(--base-size-prop) * 0.9);
+      width: calc(var(--base-size-prop) * 4);
     }
     .carrier {
-      height: ($base-size * 1);
-      width: calc($base-size * 5);
+      height: (var(--base-size-prop) * 1);
+      width: calc(var(--base-size-prop) * 5);
     }
   }
 }
@@ -155,5 +161,5 @@ input {
   opacity: 0.3;
 }
 .hide {
-  display: none;
+  display: none !important;
 }
