--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -126,6 +126,7 @@ form {
       background-color: $ship-color;
       border: $border-width solid $border-color;
       border-radius: $border-radius;
+      user-select: none;
     }
     .destroyer {
       height: $base-size;
@@ -174,9 +175,18 @@ input {
 .hover {
   background-color: #2c3a47;
 }
+.place {
+  background-color: #bceeff;
+}
+.invalid-place {
+  background-color: #ff2222;
+}
+.used {
+  opacity: 0.5;
+}
 .checked {
-  background-color: #6b8eb0;
+  background-color: #0b3c6d;
 }
 .placed {
-  opacity: 0.5;
+  background-color: #264a56;
 }
