--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -190,3 +190,9 @@ input {
 .placed {
   background-color: #264a56;
 }
+.hit {
+  background-color: #ad5d57;
+}
+.miss {
+  background-color: #5795ad;
+}
