--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -77,16 +77,30 @@ main {
 form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
   gap: $small-padding;
   padding: $large-padding;
   border-radius: $small-border-radius;
   box-shadow: 0px 0px 10px $fade-color;
   // background-color: $white-color;
-  section {
+  .players.container {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    gap: $common-size;
+  }
+  section.player {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap: $extra-small-size;
+    gap: $common-size;
+  }
+  section > .option.computer {
+    display: flex;
+  }
+  button {
+    width: 30%;
   }
 }
 .container.game {
