--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -205,10 +205,10 @@ input {
   background-color: #264a56;
 }
 .hit {
-  background-color: #ad5d57;
+  background-color: #f9a19b;
 }
 .miss {
-  background-color: #5795ad;
+  background-color: #95e0fd;
 }
 .winner {
   box-shadow: 0px 0px 1px 10px #d9ffc6;
