fix clicking on continue without placing a ship error and adding player name to the structure

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -108,10 +108,13 @@ form {
   justify-content: center;
   align-items: center;
   gap: $common-size;
-  > .player {
+
+  .components {
     display: flex;
   }
+
   .gameboard.container {
+    // display: flex;
     width: 30vw;
     aspect-ratio: 1/1;
     > div {
