--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -11,6 +11,7 @@ $highlight: #ffcccc;
 $main-color: #2c3a47;
 $secondary-color: #e1f9f4;
 $highlight-color: #ffcccc;
+$extra-large-font-size: 3rem;
 $large-font-size: 1.4rem;
 $font-size: 1rem;
 $small-font-size: 0.8rem;
@@ -84,17 +85,18 @@ form {
   border-radius: $small-border-radius;
   box-shadow: 0px 0px 10px $fade-color;
   // background-color: $white-color;
+
   .players.container {
     display: flex;
     align-items: center;
     flex-direction: row;
     gap: $common-size;
-  }
-  section.player {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-    gap: $common-size;
+    .player {
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: $common-size;
+    }
   }
   section > .option.computer {
     display: flex;
@@ -108,11 +110,26 @@ form {
   justify-content: center;
   align-items: center;
   gap: $common-size;
-
+  .continue {
+    width: 10vw;
+    height: 3vw;
+  }
   .components {
     display: flex;
   }
+  .player {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: $common-size;
 
+    font-size: $extra-large-font-size;
+  }
+  .rotation {
+    height: 30vw;
+    // width: 3vw;
+  }
   .gameboard.container {
     // display: flex;
     width: 30vw;
@@ -182,6 +199,14 @@ input {
   border-radius: $small-border-radius;
   border: 1px solid $fade-color;
   padding: $smaller-padding;
+}
+button {
+  border-radius: 5px;
+  border: solid 1px $main-color;
+  background-color: $secondary-color;
+}
+button:hover {
+  background-color: rgb(173, 173, 173);
 }
 .fade {
   opacity: 0.3;
